<resources>
    <string name="app_name">Loteca Atualizada</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Email </string>
    <string name="password">Senha </string>
    <string name="forgot_password">Esqueceu a senha ? clica aqui !! </string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="digite_seu_celular">Digite seu celular</string>
    <string name="digite_seu_cpf">Digite seu CPF</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="botao_cadastrar">CADASTRAR</string>
    <string name="deslogar">DESLOGAR</string>
    <string name="jogar">JOGAR</string>
    <string name="lista_de_apostas">LISTA DE APOSTAS</string>
    <string name="ir_para_pagamento">IR PARA PAGAMENTO</string>
    <string name="selecione_10_numeros">SELECIONE 10 NUMEROS</string>
    <string name="home">Home</string>
    <string name="ir_ao_topo">Voltar ao topo</string>
    <string name="_01">01</string>
    <string name="_02">02</string>
    <string name="_03">03</string>
    <string name="_04">04</string>
    <string name="_05">05</string>
    <string name="_06">06</string>
    <string name="_07">07</string>
    <string name="_08">08</string>
    <string name="_09">09</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="_43">43</string>
    <string name="_44">44</string>
    <string name="_45">45</string>
    <string name="_46">46</string>
    <string name="_47">47</string>
    <string name="_48">48</string>
    <string name="_49">49</string>
    <string name="_50">50</string>
    <string name="_60">60</string>
    <string name="_59">59</string>
    <string name="_58">58</string>
    <string name="_57">57</string>
    <string name="_56">56</string>
    <string name="_55">55</string>
    <string name="_54">54</string>
    <string name="_53">53</string>
    <string name="_52">52</string>
    <string name="_51">51</string>
    <string name="total">TOTAL:</string>
    <string name="valor_da_aposta_r_50_00">VALOR DA APOSTA: R$ 50,00</string>
    <string name="cadastrar_outra_aposta">NOVA APOSTA</string>
    <string name="visualizar_apostas">VISUALIZAR APOSTAS</string>
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="pagar">PAGAR</string>
    <string name="loteca">LOTECA</string>
    <string name="do_tola">DO</string>
    <string name="betola">BETOLA</string>
    <string name="lista_geral_apostas">LISTA GERAL DE APOSTAS</string>
    <string name="digite_seu_apelido">Digite seu apelido</string>
    <string name="perfil">Perfil</string>
    <string name="jogos">Jogos</string>
    <string name="minhas_apostas">Minhas apostas</string>
    <string name="todas_apostas">Lista de apostas</string>
    <string name="hello_blank_fragment">JOGOSSSS</string>
    <string name="voltar">Voltar</string>
    <string name="lista_de_games">LISTA DOS JOGOS</string>
    <string name="ranking">Ranking</string>
    <string name="roletola">ROLETOLA</string>
    <string name="girar">GIRAR</string>
    <string name="numero_sorteado">Nº Sorteado</string>
    <string name="numero_apostado">Nº Apostado</string>
    <string name="n_sorteado">Nº Sorteado</string>
    <string name="n_apostado">Nº Apostado</string>
    <string name="_10_00">10.00</string>
    <string name="_30_00">30.00</string>
    <string name="_50_00">50.00</string>
    <string name="saldo">SALDO :</string>
    <string name="_1250_00">1250.00</string>
    <string name="mega_tola">MEGA-TOLA</string>
    <string name="ca_a_niquel">CAÇA NIQUEL</string>
    <string name="apostar">APOSTAR</string>
    <string name="pagar_apostas">PAGAR APOSTA(S)</string>
    <string name="aten_o">ATENÇÃO !!!</string>
    <string name="sim">Sim</string>
    <string name="_1000">1000</string>
</resources>