<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:background="@drawable/gradient_background_transparent"
        android:alpha="0.8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginStart="0.8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="0.5dp"
        android:layout_marginBottom="1dp">

        <TextView
            android:id="@+id/dezena1"
            style="@style/botao_redondo_cardview"
            android:text="@string/_01"/>

        <TextView
            android:id="@+id/dezena2"
            style="@style/botao_redondo_cardview"
            android:layout_toEndOf="@id/dezena1"
            android:text="@string/_02"/>

        <TextView
            android:id="@+id/dezena3"
            style="@style/botao_redondo_cardview"
            android:layout_toEndOf="@id/dezena2"
            android:text="@string/_03"/>

        <TextView
            android:id="@+id/dezena4"
            style="@style/botao_redondo_cardview"
            android:layout_toEndOf="@id/dezena3"
            android:text="@string/_04"/>

        <TextView
            android:id="@+id/dezena5"
            style="@style/botao_redondo_cardview"
            android:layout_toEndOf="@id/dezena4"
            android:text="@string/_05"/>

        <TextView
            android:id="@+id/dezena6"
            style="@style/botao_redondo_cardview"
            android:layout_toEndOf="@id/dezena5"
            android:text="@string/_06"/>

        <TextView
            android:id="@+id/dezena7"
            style="@style/botao_redondo_cardview"
            android:layout_toEndOf="@id/dezena6"
            android:text="@string/_07"/>

        <TextView
            android:id="@+id/dezena8"
            style="@style/botao_redondo_cardview"
            android:layout_toEndOf="@id/dezena7"
            android:text="@string/_08"/>

        <TextView
            android:id="@+id/dezena9"
            style="@style/botao_redondo_cardview"
            android:layout_toEndOf="@id/dezena8"
            android:text="@string/_09"/>

        <TextView
            android:id="@+id/dezena10"
            style="@style/botao_redondo_cardview"
            android:layout_toEndOf="@id/dezena9"
            android:text="@string/_10"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>